lab4/syntax.output
Grammar

    0 $accept: Json $end

    1 Json: %empty
    2     | Value
    3     | Value COMMA error

    4 Value: Object
    5      | Array
    6      | STRING
    7      | NUMBER
    8      | TRUE
    9      | FALSE
   10      | VNULL

   11 Object: LC RC
   12       | LC Members RC

   13 Members: Member
   14        | Member COMMA Members
   15        | Member COMMA error

   16 Member: STRING COLON Value
   17       | STRING Value error
   18       | STRING COMMA Value error

   19 Array: LB RB
   20      | LB Values RB
   21      | LB Values error
   22      | LB Values RC error

   23 Values: Value
   24       | Value COMMA Values
   25       | Value COMMA error


Terminals, with rules where they appear

$end (0) 0
error (256) 3 15 17 18 21 22 25
LC (258) 11 12
RC (259) 11 12 22
LB (260) 19 20 21 22
RB (261) 19 20
COLON (262) 16
COMMA (263) 3 14 15 18 24 25
STRING (264) 6 16 17 18
NUMBER (265) 7
TRUE (266) 8
FALSE (267) 9
VNULL (268) 10


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
Json (15)
    on left: 1 2 3, on right: 0
Value (16)
    on left: 4 5 6 7 8 9 10, on right: 2 3 16 17 18 23 24 25
Object (17)
    on left: 11 12, on right: 4
Members (18)
    on left: 13 14 15, on right: 12 14
Member (19)
    on left: 16 17 18, on right: 13 14 15
Array (20)
    on left: 19 20 21 22, on right: 5
Values (21)
    on left: 23 24 25, on right: 20 21 22 24


State 0

    0 $accept: . Json $end

    LC      shift, and go to state 1
    LB      shift, and go to state 2
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    $default  reduce using rule 1 (Json)

    Json    go to state 8
    Value   go to state 9
    Object  go to state 10
    Array   go to state 11


State 1

   11 Object: LC . RC
   12       | LC . Members RC

    RC      shift, and go to state 12
    STRING  shift, and go to state 13

    Members  go to state 14
    Member   go to state 15


State 2

   19 Array: LB . RB
   20      | LB . Values RB
   21      | LB . Values error
   22      | LB . Values RC error

    LC      shift, and go to state 1
    LB      shift, and go to state 2
    RB      shift, and go to state 16
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    Value   go to state 17
    Object  go to state 10
    Array   go to state 11
    Values  go to state 18


State 3

    6 Value: STRING .

    $default  reduce using rule 6 (Value)


State 4

    7 Value: NUMBER .

    $default  reduce using rule 7 (Value)


State 5

    8 Value: TRUE .

    $default  reduce using rule 8 (Value)


State 6

    9 Value: FALSE .

    $default  reduce using rule 9 (Value)


State 7

   10 Value: VNULL .

    $default  reduce using rule 10 (Value)


State 8

    0 $accept: Json . $end

    $end  shift, and go to state 19


State 9

    2 Json: Value .
    3     | Value . COMMA error

    COMMA  shift, and go to state 20

    $default  reduce using rule 2 (Json)


State 10

    4 Value: Object .

    $default  reduce using rule 4 (Value)


State 11

    5 Value: Array .

    $default  reduce using rule 5 (Value)


State 12

   11 Object: LC RC .

    $default  reduce using rule 11 (Object)


State 13

   16 Member: STRING . COLON Value
   17       | STRING . Value error
   18       | STRING . COMMA Value error

    LC      shift, and go to state 1
    LB      shift, and go to state 2
    COLON   shift, and go to state 21
    COMMA   shift, and go to state 22
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    Value   go to state 23
    Object  go to state 10
    Array   go to state 11


State 14

   12 Object: LC Members . RC

    RC  shift, and go to state 24


State 15

   13 Members: Member .
   14        | Member . COMMA Members
   15        | Member . COMMA error

    COMMA  shift, and go to state 25

    $default  reduce using rule 13 (Members)


State 16

   19 Array: LB RB .

    $default  reduce using rule 19 (Array)


State 17

   23 Values: Value .
   24       | Value . COMMA Values
   25       | Value . COMMA error

    COMMA  shift, and go to state 26

    $default  reduce using rule 23 (Values)


State 18

   20 Array: LB Values . RB
   21      | LB Values . error
   22      | LB Values . RC error

    error  shift, and go to state 27
    RC     shift, and go to state 28
    RB     shift, and go to state 29


State 19

    0 $accept: Json $end .

    $default  accept


State 20

    3 Json: Value COMMA . error

    error  shift, and go to state 30


State 21

   16 Member: STRING COLON . Value

    LC      shift, and go to state 1
    LB      shift, and go to state 2
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    Value   go to state 31
    Object  go to state 10
    Array   go to state 11


State 22

   18 Member: STRING COMMA . Value error

    LC      shift, and go to state 1
    LB      shift, and go to state 2
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    Value   go to state 32
    Object  go to state 10
    Array   go to state 11


State 23

   17 Member: STRING Value . error

    error  shift, and go to state 33


State 24

   12 Object: LC Members RC .

    $default  reduce using rule 12 (Object)


State 25

   14 Members: Member COMMA . Members
   15        | Member COMMA . error

    error   shift, and go to state 34
    STRING  shift, and go to state 13

    Members  go to state 35
    Member   go to state 15


State 26

   24 Values: Value COMMA . Values
   25       | Value COMMA . error

    error   shift, and go to state 36
    LC      shift, and go to state 1
    LB      shift, and go to state 2
    STRING  shift, and go to state 3
    NUMBER  shift, and go to state 4
    TRUE    shift, and go to state 5
    FALSE   shift, and go to state 6
    VNULL   shift, and go to state 7

    Value   go to state 17
    Object  go to state 10
    Array   go to state 11
    Values  go to state 37


State 27

   21 Array: LB Values error .

    $default  reduce using rule 21 (Array)


State 28

   22 Array: LB Values RC . error

    error  shift, and go to state 38


State 29

   20 Array: LB Values RB .

    $default  reduce using rule 20 (Array)


State 30

    3 Json: Value COMMA error .

    $default  reduce using rule 3 (Json)


State 31

   16 Member: STRING COLON Value .

    $default  reduce using rule 16 (Member)


State 32

   18 Member: STRING COMMA Value . error

    error  shift, and go to state 39


State 33

   17 Member: STRING Value error .

    $default  reduce using rule 17 (Member)


State 34

   15 Members: Member COMMA error .

    $default  reduce using rule 15 (Members)


State 35

   14 Members: Member COMMA Members .

    $default  reduce using rule 14 (Members)


State 36

   25 Values: Value COMMA error .

    $default  reduce using rule 25 (Values)


State 37

   24 Values: Value COMMA Values .

    $default  reduce using rule 24 (Values)


State 38

   22 Array: LB Values RC error .

    $default  reduce using rule 22 (Array)


State 39

   18 Member: STRING COMMA Value error .

    $default  reduce using rule 18 (Member)
